--- a/public/services/index.html
+++ b/public/services/index.html
@@ -51,9 +51,6 @@
 		<nav class="nav">
 			<ul class="nav__list">
 				<li class="nav__item">
-					<a class="nav__link" href="/">Home</a>
-				</li>
-				<li class="nav__item">
 					<a class="nav__link" href="/about/">About</a>
 				</li>
 				<li class="nav__item">
@@ -62,62 +59,71 @@
 				<li class="nav__item">
 					<a class="nav__link" href="/portfolio/">Portfolio</a>
 				</li>
+				<li class="nav__item"></li>
+					<a class="nav__link" href="/hire-me/">Hire Me</a>
+				</li>
 			</ul>
 		</nav>
 	</div>
 </header>
 		
 <main class="main">
-	<div class="container">
-		<header class="page-header">
+	<header class="page-header">
+		<div class="container">
 			<h1 class="page-header__title">Services</h1>
-			<p class="page-header__text">Creating a website shouldn't be a daunting task—it should be an empowering experience. That's why I focus on simplifying the entire process for you, taking care of the details so you don't have to. Whether you need a new site from scratch or improvements to your current one, I'm here to ensure everything runs smoothly, from design to launch and beyond.</p>
-		</header>
+			<p class="page-header__text">Building a website should feel empowering, not overwhelming. I'm here to take care of all the details, whether you need a brand-new site or improvements to your existing one, ensuring the process is smooth and stress-free from start to finish.</p>
+		</div>
+	</header>
 
-		<header class="subheading">
+	<header class="subheading">
+		<div class="container">
 			<h2 class="subheading__title">Creating Your Brand New Website</h2>
 			<p class="subheading__text">Don't have a website yet? Not for long, I'm here to help you!</p>
-		</header>
+		</div>
+	</header>
 
-		<section class="section">
-			<div class="services">
-				<article class="service service--pink">
-					<header class="service__header">
-						<i class="service__icon fa-brands fa-wordpress text-pink"></i>
-						<h3 class="service__title">WordPress Website</h3>
-					</header>
-					<p><strong class="text-light">Overview:</strong> Tailored for those who want the flexibility of managing their own content, WordPress is a powerful and popular choice. With my twelve years of experience, I craft custom WordPress themes that are lightweight, fast, and easy to manage.</p>
-					<p><strong class="text-light">Ideal For:</strong> Creatives or small businesses who need a dynamic, regularly updated website with a user-friendly admin interface.</p>
-					<p><strong class="text-light">Features:</strong></p>
-					<ul class="mb-0">
-						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Custom-built themes for optimal performance</li>
-						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Scalable and easy to update</li>
-						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Secure and SEO-friendly</li>
-					</ul>
-				</article>
-				<article class="service service--pink">
-					<header class="service__header">
-						<i class="service__icon fa-solid fa-code text-pink"></i>
-						<h3 class="service__title">Static HTML/CSS Website</h3>
-					</header>
-					<p><strong class="text-light">Overview:</strong> For clients who want a feather weight, blazing fast, small site that doesn't require frequent updates, I offer custom-built static websites using HTML, CSS, and Eleventy. This approach provides superior performance and minimal maintenance.</p>
-					<p><strong class="text-light">Ideal For:</strong> Clients who need a small site for displaying information, like an online business card, that prioritizes speed and simplicity.</p>
-					<p><strong class="text-light">Features:</strong></p>
-					<ul class="mb-0">
-						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Blazing fast load times</li>
-						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Low maintenance, low upkeep costs</li>
-						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Easy to extend and update as needed</li>
-					</ul>
-				</article>
-			</div>
-		</section>
+	<section class="section">
+		<div class="services container">
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-brands fa-wordpress text-pink"></i>
+					<h3 class="service__title">WordPress Website</h3>
+				</header>
+				<p><strong class="text-light">Overview:</strong> Tailored for those who want the flexibility of managing their own content, WordPress is a powerful and popular choice. With my twelve years of experience, I craft custom WordPress themes that are lightweight, fast, and easy to manage.</p>
+				<p><strong class="text-light">Ideal For:</strong> Creatives or small businesses who need a dynamic, regularly updated website with a user-friendly admin interface.</p>
+				<p><strong class="text-light">Features:</strong></p>
+				<ul class="mb-0">
+					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Custom-built themes for optimal performance</li>
+					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Scalable and easy to update</li>
+					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Secure and SEO-friendly</li>
+				</ul>
+			</article>
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-code text-pink"></i>
+					<h3 class="service__title">Static HTML/CSS Website</h3>
+				</header>
+				<p><strong class="text-light">Overview:</strong> For clients who want a feather weight, blazing fast, small site that doesn't require frequent updates, I offer custom-built static websites using HTML, CSS, and Eleventy. This approach provides superior performance and minimal maintenance.</p>
+				<p><strong class="text-light">Ideal For:</strong> Clients who need a small site for displaying information, like an online business card, that prioritizes speed and simplicity.</p>
+				<p><strong class="text-light">Features:</strong></p>
+				<ul class="mb-0">
+					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Blazing fast load times</li>
+					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Low maintenance, low upkeep costs</li>
+					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Easy to extend and update as needed</li>
+				</ul>
+			</article>
+		</div>
+	</section>
 
-		<header class="subheading">
+	<header class="subheading">
+		<div class="container">
 			<h2 class="subheading__title mt-0">Improving Your Existing Website</h2>
 			<p class="subheading__text">Already have a website that needs tweaking? Let me make it better!</p>
-		</header>
+		</div>
+	</header>
 
-		<section class="section services">
+	<section class="section">
+		<div class="container services">
 			<article class="service service--yellow">
 				<header class="service__header">
 					<i class="service__icon fa-solid fa-gauge-high text-yellow"></i>
@@ -146,78 +152,14 @@
 					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced mobile responsiveness</li>
 				</ul>
 			</article>
-		</section>
-		
-		<a class="btn btn--primary mb-2" href="/contact/">Let's Work Together!</a>
+		</div>
+	</section>
 
-		<section class="section">
-			<header class="subheading">
-				<h2 class="subheading__title">Frequently Asked Questions</h2>
-				<p class="subheading__text">Here's a few of your questions already answered.</p>
-			</header>
-			<details class="faq">
-				<summary class="faq__question">How long does it take to build a website?</summary>
-				<div class="faq__answer">
-					<p>The timeline for building a website can range anywhere from a few days to a few weeks. Since I specialize in crafting simple, yet effective websites, I typically aim to complete projects within 3 weeks from start to finish. However, this can vary depending on the complexity of your project and my workload at the time. During our initial consultation, I'll provide a more accurate estimate based on your specific needs.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">What's the difference between WordPress and a Static HTML/CSS website?</summary>
-				<div class="faq__answer">
-					<p>WordPress is a content management system (CMS) that allows users to easily create, manage, and update content without needing to know how to code. It's a powerful and flexible platform with a vast ecosystem of plugins and themes, making it ideal for dynamic websites that require regular updates.</p>
-					<p>On the other hand, a static HTML/CSS website is built using just HTML, CSS, and possibly some JavaScript, without the need for a database. This type of website is faster, more secure, and requires less maintenance because it doesn't have the same level of complexity as a CMS. Static websites are a great choice for those who don't need frequent content updates and prioritize performance.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">How much will my website cost?</summary>
-				<div class="faq__answer">
-					<p>During our no-obligation call, I'll discuss your specific requirements and provide you with an hourly rate along with an approximate number of hours I anticipate your project will take. This way, you'll have a clear understanding of the potential costs involved before we proceed.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">Can I update the content on my website myself?</summary>
-				<div class="faq__answer">
-					<p>Yes, absolutely! If we build your website on WordPress, you'll have access to an easy-to-use admin interface where you can update content, add new pages, or make changes as needed, all without touching the code. If you choose a static HTML/CSS website, content updates will typically require coding knowledge, but I'm always here to assist with any changes you need.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">Will my website be mobile-friendly?</summary>
-				<div class="faq__answer">
-					<p>Of course! In 2024, it's essential for every website to use a mobile-first approach to stay competitive in both performance and user experience. I've been building websites with this approach for a long time, so you can be confident that your site will look and perform well on any device. Unlike some online tools that create separate mobile versions of your website (which often require more maintenance and code), I'll build a single, responsive design that adapts seamlessly to all screen sizes.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">How do you ensure my website will be fast and perform well?</summary>
-				<div class="faq__answer">
-					<p>I use a combination of clean, efficient code, optimized images and media, and thoughtful design choices to ensure your website runs smoothly. Additionally, I leverage a variety of professional online performance optimization tools to test and fine-tune your site, ensuring it delivers a fast and seamless user experience.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">What's included in your ongoing support?</summary>
-				<div class="faq__answer">
-					<p>After your website is launched, I'm here to help with any content or design tweaks, troubleshooting, and other adjustments you might need. Whether it's minor updates, resolving issues, or simply providing guidance, you can rely on me for ongoing support to keep your website in peak condition.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">Do you offer SEO services?</summary>
-				<div class="faq__answer">
-					<p>I focus on writing SEO-friendly code that both search engines and accessibility tools love. This includes using semantic HTML, optimizing site structure, and ensuring fast load times, which are all crucial for good on-site SEO. However, I do not provide off-site SEO services like link building or content marketing. My goal is to build a solid technical foundation for your website's SEO success.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">Can you help with an existing website, or do you only build new ones?</summary>
-				<div class="faq__answer">
-					<p>Yes, I can definitely help with an existing website. Whether you need design and UX enhancements, performance optimization, or other updates, I'm here to improve your current site and make it better than ever.</p>
-				</div>
-			</details>
-			<details class="faq">
-				<summary class="faq__question">Will my website be secure?</summary>
-				<div class="faq__answer">
-					<p>Absolutely. All websites I build will be secured with an SSL certificate to ensure that data transferred between the user and the website is encrypted. For WordPress sites, I also set up security measures like firewall plugins and regular updates to safeguard your site from potential online threats.</p>
-				</div>
-			</details>
-		</section>
-	</div>
+	<section class="section cta">
+		<div class="container">
+			<a class="btn btn--primary" href="/hire-me/">Let's Work Together!</a>
+		</div>
+	</section>
 </main>
 		<footer class="footer">
 	<div class="container footer__container">
