--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -6,53 +6,59 @@ css: about
 ---
 
 <main class="main about">
-	<div class="container">
-		<header class="page-header">
+	<header class="page-header">
+		<div class="container">
 			<h1 class="page-header__title">About</h1>
-		</header>
-		<div class="about-photo">
-			<img class="about-photo__image" src="/assets/images/roland.webp" alt="Roland Szabó" title="Hi, I'm Roland!">
 		</div>
-		<p class="h3 mt-0">I believe that creating a website should be a simple, stress-free, and <span class="text-pink">fun</span> process.</p>
-		<p>I'm Roland, web and UI/UX designer for the last 15 years, and I focus on making the entire process as easy as possible for you. From design to launch, my goal is to eliminate the complexity, so you can focus on what matters most—growing your business or creative work.</p>
-		<p>With an empathetic, easy-going approach, I work closely with you to craft a website that's not only fast and responsive but also tailored to your unique needs. Whether you're a small business owner or a creative professional, I truly believe in making your life easier while building something that works seamlessly for your audience.</p>
+	</header>
 
-		<a class="btn btn--primary mb-2" href="/contact/">Let's Work Together!</a>
-
-		<h2>Experience That Matters</h2>
-		<div class="experience">
-			<article>
-				<p>In the past decade, I've had the privilege of working across various industries—building and optimizing websites for VPN companies, privacy advocates, SEO firms, and tech startups. Each of these experiences has sharpened my skills in web design, web development, and performance optimization. Along the way, I've managed teams, led design efforts, and created hundreds of websites of all kinds.</p>
-				<p>Whether it's designing a sleek, responsive interface or developing custom WordPress themes and web applications, I'm constantly refining my craft to deliver the best possible results.</p>
-			</article>
-			<aside class="experience__skillset">
-				<h3 class="mt-0">Skillset</h3>
-				<ul class="experience__list">
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> Responsive Web Design</li>
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> WordPress Development</li>
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> <abbr title="User Interface / Experience Design">UI / UX</abbr> Design</li>
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> Mobile-First Approach</li>
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> Search Engine Optimization</li>
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> Web Performance</li>
-					<li><i class="fa-solid fa-star text-yellow icon-left"></i> Accessibility</li>
-				</ul>
-			</aside>
+	<section class="section">
+		<div class="container">
+			<div class="about-photo">
+				<img class="about-photo__image" src="/assets/images/roland.webp" alt="Roland Szabó" title="Hi, I'm Roland!">
+			</div>
+			<p class="h3 mt-0">I believe that creating a website should be a simple, stress-free, and <span class="text-pink">fun</span> process.</p>
+			<p>I'm Roland, a web designer with 15 years of experience. My mission is to make the entire website-building process as easy as possible for you. Whether you're a small business owner or a creative professional, I believe in crafting websites that work for your audience while eliminating the complexities for you.</p>
+			<div>
+				<a class="btn btn--primary mt-2 mb-2" href="/hire-me/">Let's Work Together!</a>
+			</div>
 		</div>
+	</section>
 
-		<h2>Why Work with Me?</h2>
-		<p><strong class="text-light">I'm not just here to build a website; I'm here to make your life easier.</strong> With over a decade of hands-on experience, I combine my technical skills with a deep understanding of design and user experience. But most importantly, I'm easy to work with. I'll listen to your needs, keep things simple, and ensure the final product exceeds your expectations—without the headaches.</p>
-		<h3>I Can Help You With:</h3>
-		<ul>
-			<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> <strong class="text-light">Custom WordPress Development:</strong> <br>Expertise in building from scratch or customizing existing sites to meet your needs.</li>
-			<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> <strong class="text-light">Responsive Design:</strong> <br>Every site I build adapts perfectly to all devices and screen sizes.</li>
-			<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> <strong class="text-light">Performance Optimization:</strong> <br>I ensure that your site loads quickly and runs smoothly, with clean, semantic code.</li>
-			<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> <strong class="text-light">User-Centered Design:</strong> <br>My designs are simple, intuitive, and built with your audience in mind.</li>
-		</ul>
+	<section class="section">
+		<div class="container">
+			<h2>Experience That Matters</h2>
+			<div class="experience">
+				<article>
+					<p>In the past decade, I've had the privilege of working across various industries—building and optimizing websites for VPN companies, privacy advocates, SEO firms, and tech startups. Each of these experiences has sharpened my skills in web design, web development, and performance optimization. Along the way, I've managed teams, led design efforts, and created hundreds of websites of all kinds.</p>
+					<p>Whether it's designing a sleek, responsive interface or developing custom WordPress themes and web applications, I'm constantly refining my craft to deliver the best possible results.</p>
+				</article>
+				<aside class="experience__skillset">
+					<h3 class="mt-0">Skillset</h3>
+					<ul class="experience__list">
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> Responsive Web Design</li>
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> WordPress Development</li>
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> <abbr title="User Interface / Experience Design">UI / UX</abbr> Design</li>
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> Mobile-First Approach</li>
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> Search Engine Optimization</li>
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> Web Performance</li>
+						<li><i class="fa-solid fa-star text-yellow icon-left"></i> Accessibility</li>
+					</ul>
+				</aside>
+			</div>
+		</div>
+	</section>
 
-		<a class="btn btn--primary mb-2" href="/contact/">Let's Work Together!</a>
+	<section class="section">
+		<div class="container">
+			<h2>How It All Started</h2>
+			<p class="mb-0">My passion for web design began during my university years, where I taught myself WordPress and launched my web design blog. That experience became the foundation for my journey in WordPress development, and it still drives my love for pushing the limits of what websites can achieve.</p>
+		</div>
+	</section>
 
-		<h2>How It All Started</h2>
-		<p>I've always had a passion for website creation. In fact, I used to skip university classes to teach myself WordPress and build my own web design blog. For five years, that blog became a hub of creative experimentation and learning, and it gave me the hands-on experience that helped me grow into the WordPress expert I am today.</p>
-		<p>Over the years, I've honed my skills, learning the ins and outs of custom WordPress development. With every new project, there's something fresh to learn, and I love pushing WordPress to its limits to deliver exactly what my clients need.</p>
-	</div>
+	<section class="section cta">
+		<div class="container">
+			<a class="btn btn--primary" href="/hire-me/">Let's Work Together!</a>
+		</div>
+	</section>
 </main>
