--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -15,18 +15,18 @@ css: home
 				<span class="supercharged">Supercharged</span>
 			</h1>
 			<p class="home__tagline h3">
-				<strong>I believe that everyone deserves a website that's fast, simple, and effortless to manage.</strong>
+				<strong>Everyone deserves a website that's fast, simple, and effortless to manage.</strong>
 			</p>
-			<p>That's why for the last 15 years I've been passionate about designing websites that not only look elegantly simple but also load quickly and run smoothly. Whether you're a creative or a small business, I take care of everything—from design to optimization—so you can focus on what you do best.</p>
-			<a class="btn btn--primary mt-2" href="#">Here's How</a>
+			<p>For 15 years, I've been passionate about designing websites that look simple and perform well. Whether you're a creative entrepreneur or a small business, I handle everything—from design to optimization—so you can focus on what you do best without worrying about your website.</p>
+			<a class="btn btn--primary mt-2" href="#how">Here's How</a>
 		</div>
 	</header>
 
-	<section class="section">
+	<section class="section" id="how">
 		<div class="container">
 			<header class="subheading">
 				<h2 class="subheading__title">What You'll Get When We Work Together</h2>
-				<p class="subheading__text">I'm not just here to build a website; I'm here to make your life easier.</p>
+				<p class="subheading__text">More than just a website—I'll help make your life easier.</p>
 			</header>
 			<div class="benefits">
 				<article class="benefits__item">
@@ -49,59 +49,9 @@ css: home
 		</div>
 	</section>
 
-	<section class="section">
+	<section class="section cta">
 		<div class="container">
-			<div class="testimonials">
-				<blockquote class="testimonial">
-					<header class="testimonial__header">
-						<img class="testimonial__image" src="/assets/images/testimonial-pete.webp" alt="Pete Zaborszky">
-						<div class="testimonial__author">
-							<cite class="testimonial__name">Peter Zaborszky</cite>
-							<span class="testimonial__job">co-founder</span> &ndash; <a class="testimonial__link" href="https://proprivacy.com/" target="_blank" rel="noreferrer noopener">ProPrivacy</a>
-						</div>
-					</header>
-					<p class="testimonial__text">Roland has worked for me full time for 7 years, and that is a testament to his skills. He is both an excellent designer for apps and web projects, but can also code them as a frontend developer. He has a great work ethic. He is very honest and is open to debate about designs, which makes working with him very productive. I highly recommend working with him.</p>
-				</blockquote>
-				<blockquote class="testimonial">
-					<header class="testimonial__header">
-						<img class="testimonial__image" src="/assets/images/testimonial-lacza.webp" alt="László Magyar">
-						<div class="testimonial__author">
-							<cite class="testimonial__name">László Magyar</cite>
-							<span class="testimonial__job">digital artist</span> &ndash; <a class="testimonial__link" href="https://laczadesign.com/" target="_blank" rel="noreferrer noopener">LaczaDesign</a>
-						</div>
-					</header>
-					<p class="testimonial__text">Roland is a very helpful professional who is always on hand if there is a problem with the site or if it needs to be fixed/updated. From the very beginning he worked to make sure that all my ideas were valid and workable under all circumstances. I 100% recommend him for any type of site and I guarantee he will not disappoint.</p>
-				</blockquote>
-			</div>
-		</div>
-	</section>
-
-	<section class="section">
-		<div class="container">
-			<header class="subheading">
-				<h2 class="subheading__title">How I'll Bring Your Vision to Life</h2>
-				<p class="subheading__text">My web design process is straightforward and as most hassle-free as possible.</p>
-			</header>
-			<ol class="process">
-				<li class="process__item">
-					<h3 class="process__title">Discovery</h3>
-					<p class="process__text">Let's discuss your goals and vision in a no-obligation online call. I'll provide a personalized quote and timeline, ensuring the process is clear and aligned with your needs.</p>
-				</li>
-				<li class="process__item">
-					<h3 class="process__title">Design &amp; Development</h3>
-					<p class="process__text">I design directly in code, merging design and development for a faster, cohesive build. This streamlined process ensures your website is both visually stunning and highly functional. Prefer a traditional design-first approach? I can accommodate that too.</p>
-				</li>
-				<li class="process__item">
-					<h3 class="process__title">Launch</h3>
-					<p class="process__text">We'll fine-tune your site and add the finishing content. I'll guide you through managing your new site so you can hit the ground running.</p>
-				</li>
-				<li class="process__item">
-					<h3 class="process__title">Ongoing Support</h3>
-					<p class="process__text">After launch, I'm here to help with updates, maintenance, and any questions you have, ensuring your website stays in peak condition.</p>
-				</li>
-			</ol>
-
-			<a class="btn btn--primary mt-2" href="/contact/">Let's Work Together!</a>
+			<a class="btn btn--primary" href="/hire-me/">Let's Work Together!</a>
 		</div>
 	</section>
 </main>
