--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -6,56 +6,70 @@ css: portfolio
 ---
 
 <main class="main about">
-	<div class="container">
-		<header class="page-header">
+	<header class="page-header">
+		<div class="container">
 			<h1 class="page-header__title">Portfolio</h1>
-			<p class="page-header__text">Intro. Maybe.</p>
-		</header>
+			<p class="page-header__text">Each project represents a tailored solution to unique challenges. Whether it's a custom UI or a fast-performing WordPress website, I take pride in delivering both beauty and functionality. Explore my case studies below to see how I've helped clients across different industries achieve their goals.</p>
+		</div>
+	</header>
+	
+	<div class="container">
+		<article class="portfolio">
+			<h2 class="portfolio__title">Fabriklak</h2>
+			<p class="h3">Alpine Hut WordPress Redesign for a Tranquil Getaway</p>
+			<p>Fabriklak is a charming alpine hut located in the serene mountains of the Mátra, just an hour from Budapest, offering a perfect retreat for relaxation.</p>
+			<div class="portfolio__gallery">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/fabriklak-1.webp" alt="Fabriklak">
+				<img class="portfolio__image" src="/assets/images/portfolio/fabriklak-2.webp" alt="Fabriklak">
+				<img class="portfolio__image" src="/assets/images/portfolio/fabriklak-3.webp" alt="Fabriklak">
+			</div>
+			<p><strong class="text-light">Challenge:</strong> Their original website was chaotic, making it hard for visitors to find important information, especially for booking. The challenge was to redesign the site with a more structured, sleek, and engaging design while improving the overall user experience—particularly on the booking page, which was confusing to navigate.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> I developed a custom WordPress theme with a modern, colorful, and inviting design that reflects the hut's relaxing atmosphere. A major improvement was in organizing the site's information more effectively, ensuring visitors could quickly find what they needed. The Booking page, in particular, was revamped by placing the booking form directly beside the availability calendar, streamlining the process for users. The result is a much more user-friendly site that makes planning a stay at Fabriklak a seamless experience.</p>
+		</article>
 
 		<article class="portfolio">
-			<div class="portfolio__text">
-				<h2 class="portfolio__title">Polinvent</h2>
-				<p class="h3">AI-Driven Pipe Repair Robot User Interface Design</p>
-				<p>Polinvent's AI-driven pipe repair robot is a small yet powerful machine used in industrial and civil environments.</p>
-				<p><strong class="text-light">Challenge:</strong> The interface needed to fit within a 16:9 display without any scrolling, and the design had to be accessible to workers wearing gloves. This posed the challenge of creating large, easy-to-press buttons without sacrificing the clarity of the information displayed on-screen.</p>
-				<p><strong class="text-light">Solution:</strong> I designed an intuitive interface where all vital functions and information were accessible without the need for scrolling. By strategically placing large buttons and arranging data in a compact yet readable format, I ensured the UI would be easy to navigate, even for gloved users. This design helped streamline operations, allowing workers to save time and operate the machine efficiently in challenging conditions.</p>
-			</div>
+			<h2 class="portfolio__title">Polinvent</h2>
+			<p class="h3">AI-Driven Pipe Repair Robot User Interface Design</p>
+			<p>Polinvent's AI-driven pipe repair robot is a small yet powerful machine used in industrial and civil environments.</p>
 			<div class="portfolio__gallery">
 				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/polinvent-1.webp" alt="Polinvent">
 				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-2.webp" alt="Polinvent">
 				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-3.webp" alt="Polinvent">
 			</div>
+			<p><strong class="text-light">Challenge:</strong> The interface needed to fit within a 16:9 display without any scrolling, and the design had to be accessible to workers wearing gloves. This posed the challenge of creating large, easy-to-press buttons without sacrificing the clarity of the information displayed on-screen.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> I designed an intuitive interface where all vital functions and information were accessible without the need for scrolling. By strategically placing large buttons and arranging data in a compact yet readable format, I ensured the UI would be easy to navigate, even for gloved users. This design helped streamline operations, allowing workers to save time and operate the machine efficiently in challenging conditions.</p>
 		</article>
 
 		<article class="portfolio">
-			<div class="portfolio__text">
-				<h2 class="portfolio__title">LaczaDesign</h2>
-				<p class="h3">Custom WordPress Website for a Visual Artist</p>
-				<p>László Magyar, also known as LaczaDesign, is a talented 2D/3D visual artist who creates custom digital artwork for the music industry.</p>
-				<p><strong class="text-light">Challenge:</strong> He needed a website that would showcase his vibrant, intricate designs without overwhelming viewers. To achieve this, we needed a monochromatic website that allowed his colorful works to take center stage. Additionally, the challenge was to display hundreds of high-quality images on one page without sacrificing performance or load times.</p>
-				<p><strong class="text-light">Solution:</strong> I developed a custom WordPress theme from scratch, focusing on a minimalist, monochromatic design that highlighted LaczaDesign's portfolio. Each artwork category was enhanced with custom fields, enabling László to add specific details like the artist's name, production year, and project description for each piece. For performance optimization, I implemented lazy loading and optimized images, ensuring the site loaded quickly even with hundreds of images displayed at once. This provided a seamless and visually striking user experience.</p>
-				<p><i class="fa-solid fa-star text-yellow icon-left"></i><strong class="text-light">In Lacza's Words:</strong> <em>Roland is a very helpful professional who is always on hand if there is a problem with the site or if it needs to be fixed/updated. Roland and I have known each other for a long time, so I couldn't think of anyone else when I wanted a website for my portfolio. From the very beginning he worked to make sure that all my ideas were valid and workable under all circumstances. He is also always there for support if something goes wrong with the site. I 100% recommend him for any type of site and I guarantee he will not disappoint.</em></p>
-			</div>
+			<h2 class="portfolio__title">LaczaDesign</h2>
+			<p class="h3">Custom WordPress Website for a Visual Artist</p>
+			<p>László Magyar, also known as LaczaDesign, is a talented 2D/3D visual artist who creates custom digital artwork for the music industry.</p>
 			<div class="portfolio__gallery">
 				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/laczadesign-1.webp" alt="LaczaDesign">
 				<img class="portfolio__image" src="/assets/images/portfolio/laczadesign-2.webp" alt="LaczaDesign">
 				<img class="portfolio__image" src="/assets/images/portfolio/laczadesign-3.webp" alt="LaczaDesign">
 			</div>
+			<p><strong class="text-light">Challenge:</strong> He needed a website that would showcase his vibrant, intricate designs without overwhelming viewers. To achieve this, we needed a monochromatic website that allowed his colorful works to take center stage. Additionally, the challenge was to display hundreds of high-quality images on one page without sacrificing performance or load times.</p>
+			<p><strong class="text-light">Solution:</strong> I developed a custom WordPress theme from scratch, focusing on a minimalist, monochromatic design that highlighted LaczaDesign's portfolio. Each artwork category was enhanced with custom fields, enabling László to add specific details like the artist's name, production year, and project description for each piece. For performance optimization, I implemented lazy loading and optimized images, ensuring the site loaded quickly even with hundreds of images displayed at once. This provided a seamless and visually striking user experience.</p>
 		</article>
 
 		<article class="portfolio">
-			<div class="portfolio__text">
-				<h2 class="portfolio__title">Csorba Péter Art</h2>
-				<p class="h3">Simple & Minimalist WordPress Site for a Contemporary Painter</p>
-				<p>Csorba Péter, a Hungarian/Transylvanian contemporary painter.</p>
-				<p><strong class="text-light">Challenge:</strong> He wanted a clean, minimalist website to showcase his art with "design without design." The goal was to ensure his paintings took center stage without any distractions. Additionally, he required custom metadata fields for each artwork, allowing him to display details like the medium and technique used. A newsletter subscription alongside a blog was also essential for him to stay connected with his audience. In the future, we'll also add a webshop to sell his artworks.</p>
-				<p><strong class="text-light">Solution:</strong> I created a sleek, minimalist WordPress website that embodied the concept of "design without design." The layout was extremely simple, focusing entirely on his artwork. Custom fields were built to allow Péter to input metadata like medium and technique, seamlessly integrating into the site's artwork pages. I also set up a newsletter subscription form alongside a blog where he could share updates with his audience. The structure is already set up for a future webshop integration, allowing for easy expansion when he's ready to sell his works online.</p>
-			</div>
+			<h2 class="portfolio__title">Csorba Péter Art</h2>
+			<p class="h3">Simple & Minimalist WordPress Site for a Contemporary Painter</p>
+			<p>Csorba Péter is a Hungarian/Transylvanian contemporary painter, working primarily with oils.</p>
 			<div class="portfolio__gallery">
 				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/csorbapeterart-1.webp" alt="Csorba Péter Art">
 				<img class="portfolio__image" src="/assets/images/portfolio/csorbapeterart-2.webp" alt="Csorba Péter Art">
 				<img class="portfolio__image" src="/assets/images/portfolio/csorbapeterart-3.webp" alt="Csorba Péter Art">
 			</div>
+			<p><strong class="text-light">Challenge:</strong> He wanted a clean, minimalist website to showcase his art with "design without design." The goal was to ensure his paintings took center stage without any distractions. Additionally, he required custom metadata fields for each artwork, allowing him to display details like the medium and technique used. A newsletter subscription alongside a blog was also essential for him to stay connected with his audience. In the future, we'll also add a webshop to sell his artworks.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> I created a sleek, minimalist WordPress website that embodied the concept of "design without design." The layout was extremely simple, focusing entirely on his artwork. Custom fields were built to allow Péter to input metadata like medium and technique, seamlessly integrating into the site's artwork pages. I also set up a newsletter subscription form alongside a blog where he could share updates with his audience. The structure is already set up for a future webshop integration, allowing for easy expansion when he's ready to sell his works online.</p>
 		</article>
 	</div>
+
+	<section class="section cta">
+		<div class="container">
+			<a class="btn btn--primary" href="/hire-me/">Let's Work Together!</a>
+		</div>
+	</section>
 </main>
