--- a/public/services/index.html
+++ b/public/services/index.html
@@ -163,7 +163,8 @@
 </main>
 		<footer class="footer">
 	<div class="container footer__container">
-		<small>&copy; 2024 Roland Szabó Design</small>
+		<p class="copyright">&copy; 2024 Roland Szabó. All rights reserved.</p>
+		<p class="smallprint">Hand-crafted in HTML & CSS. Generated with <a class="footer__link" href="https://11ty.dev" target="_blank" rel="noreferrer noopener">Eleventy</a>. Served by <a class="footer__link" href="https://netlify.com" target="_blank" rel="noreferrer noopener">Netlify</a>.</p>
 	</div>
 </footer>
 	</body>
