--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -28,6 +28,19 @@ css: portfolio
 		</article>
 
 		<article class="portfolio">
+			<h2 class="portfolio__title">Roland Szabó Photography</h2>
+			<p class="h3">Static, Multilingual Website for my Portrait Photography Business</p>
+			<p>I shoot portraits in Budapest with the belief that everyone is photogenic. <a href="https://rolandszabo.photo/en/" target="_blank" rel="nofererrer noopener">Come by some time!</a></p>
+			<div class="portfolio__gallery">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/roland-szabo-photography-1.webp" alt="Roland Szabó Photography">
+				<img class="portfolio__image" src="/assets/images/portfolio/roland-szabo-photography-2.webp" alt="Roland Szabó Photography">
+				<img class="portfolio__image" src="/assets/images/portfolio/roland-szabo-photography-3.webp" alt="Roland Szabó Photography">
+			</div>
+			<p><strong class="text-light">Challenge:</strong> The website needed to showcase my photography in a simple, distraction-free way while also being convenient for me to manage. Additionally, the site needed to be multilingual to cater to both English and Hungarian-speaking audiences.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> I built the website with Eleventy to manage it all in code, hosting it on Netlify to avoid server costs and complex databases. I've been developing this site for four years, constantly refining the design to keep it sleek, user-friendly, and fully optimized for showcasing my portraits.</p>
+		</article>
+
+		<article class="portfolio">
 			<h2 class="portfolio__title">Polinvent</h2>
 			<p class="h3">AI-Driven Pipe Repair Robot User Interface Design</p>
 			<p>Polinvent's AI-driven pipe repair robot is a small yet powerful machine used in industrial and civil environments.</p>
