--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -19,8 +19,9 @@ css: about
 			</div>
 			<p class="h3 mt-0">I believe that creating a website should be a simple, stress-free, and <span class="text-pink">fun</span> process.</p>
 			<p>I'm Roland, a web designer with 15 years of experience. My mission is to make the entire website-building process as easy as possible for you. Whether you're a small business owner or a creative professional, I believe in crafting websites that work for your audience while eliminating the complexities for you.</p>
-			<div>
-				<a class="btn btn--primary mt-2 mb-2" href="/hire-me/">Let's Work Together!</a>
+			<div class="mb-2">
+				<a class="btn btn--primary mt-2" href="/hire-me/">Let's Work Together!</a>
+				<a class="btn mt-2" href="/assets/roland-szabo-cv.pdf">View my CV</a>
 			</div>
 		</div>
 	</section>
