--- a/src/pages/hire-me.html
+++ b/src/pages/hire-me.html
@@ -163,7 +163,7 @@ css: hire-me
 		<div class="container">
 			<h2 class="mt-0">Ready to Get Started?</h2>
 			<p>Let's make your website work for you. Drop me an email and let's talk about your vision!</p>
-			<a class="btn btn--primary" href="mailto:hi@rolandszabo.design">Send me your ideas</a>
+			<a class="btn btn--primary" href="mailto:hi@rolandszabo.design">Send me your idea</a>
 		</div>
 	</section>
 </main>
