--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -29,7 +29,7 @@ css: portfolio
 
 		<article class="portfolio">
 			<h2 class="portfolio__title">Roland Szabó Photography</h2>
-			<p class="h3">Static, Multilingual Website for my Portrait Photography Business</p>
+			<p class="h3">Static, Multilingual Website for my Photography Business</p>
 			<p>I shoot portraits in Budapest with the belief that everyone is photogenic. <a href="https://rolandszabo.photo/en/" target="_blank" rel="nofererrer noopener">Come by some time!</a></p>
 			<div class="portfolio__gallery">
 				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/roland-szabo-photography-1.webp" alt="Roland Szabó Photography">
@@ -85,4 +85,6 @@ css: portfolio
 			<a class="btn btn--primary" href="/hire-me/">Let's Work Together!</a>
 		</div>
 	</section>
+
+	{% include "partials/lightbox.html" %}
 </main>
