--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -21,7 +21,7 @@ css: about
 			<p>I'm Roland, a web designer with 15 years of experience. My mission is to make the entire website-building process as easy as possible for you. Whether you're a small business owner or a creative professional, I believe in crafting websites that work for your audience while eliminating the complexities for you.</p>
 			<div class="mb-2">
 				<a class="btn btn--primary mt-2" href="/hire-me/">Let's Work Together!</a>
-				<a class="btn mt-2" href="/assets/roland-szabo-cv.pdf">View my CV</a>
+				<a class="btn mt-2" href="/assets/roland-szabo-cv.pdf" target="_blank" rel="noreferrer noopener">View my CV</a>
 			</div>
 		</div>
 	</section>
