--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -19,9 +19,9 @@ css: portfolio
 			<p class="h3">Alpine Hut WordPress Redesign for a Tranquil Getaway</p>
 			<p>Fabriklak is a charming alpine hut located in the serene mountains of the Mátra, just an hour from Budapest, offering a perfect retreat for relaxation.</p>
 			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/fabriklak-1.webp" alt="Fabriklak">
-				<img class="portfolio__image" src="/assets/images/portfolio/fabriklak-2.webp" alt="Fabriklak">
-				<img class="portfolio__image" src="/assets/images/portfolio/fabriklak-3.webp" alt="Fabriklak">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/fabriklak-1.webp" alt="Fabriklak" width="1400" height="911">
+				<img class="portfolio__image" src="/assets/images/portfolio/fabriklak-2.webp" alt="Fabriklak" width="1400" height="911">
+				<img class="portfolio__image" src="/assets/images/portfolio/fabriklak-3.webp" alt="Fabriklak" width="1400" height="911">
 			</div>
 			<p><strong class="text-light">Challenge:</strong> Their original website was chaotic, making it hard for visitors to find important information, especially for booking. The challenge was to redesign the site with a more structured, sleek, and engaging design while improving the overall user experience—particularly on the booking page, which was confusing to navigate.</p>
 			<p class="mb-0"><strong class="text-light">Solution:</strong> I developed a custom WordPress theme with a modern, colorful, and inviting design that reflects the hut's relaxing atmosphere. A major improvement was in organizing the site's information more effectively, ensuring visitors could quickly find what they needed. The Booking page, in particular, was revamped by placing the booking form directly beside the availability calendar, streamlining the process for users. The result is a much more user-friendly site that makes planning a stay at Fabriklak a seamless experience.</p>
@@ -32,9 +32,9 @@ css: portfolio
 			<p class="h3">Static, Multilingual Website for my Photography Business</p>
 			<p>I shoot portraits in Budapest with the belief that everyone is photogenic. <a href="https://rolandszabo.photo/en/" target="_blank" rel="nofererrer noopener">Come by some time!</a></p>
 			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/roland-szabo-photography-1.webp" alt="Roland Szabó Photography">
-				<img class="portfolio__image" src="/assets/images/portfolio/roland-szabo-photography-2.webp" alt="Roland Szabó Photography">
-				<img class="portfolio__image" src="/assets/images/portfolio/roland-szabo-photography-3.webp" alt="Roland Szabó Photography">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/roland-szabo-photography-1.webp" alt="Roland Szabó Photography" width="1500" height="944">
+				<img class="portfolio__image" src="/assets/images/portfolio/roland-szabo-photography-2.webp" alt="Roland Szabó Photography" width="1500" height="944">
+				<img class="portfolio__image" src="/assets/images/portfolio/roland-szabo-photography-3.webp" alt="Roland Szabó Photography" width="1500" height="944">
 			</div>
 			<p><strong class="text-light">Challenge:</strong> The website needed to showcase my photography in a simple, distraction-free way while also being convenient for me to manage. Additionally, the site needed to be multilingual to cater to both English and Hungarian-speaking audiences.</p>
 			<p class="mb-0"><strong class="text-light">Solution:</strong> I built the website with Eleventy to manage it all in code, hosting it on Netlify to avoid server costs and complex databases. I've been developing this site for four years, constantly refining the design to keep it sleek, user-friendly, and fully optimized for showcasing my portraits.</p>
@@ -45,9 +45,9 @@ css: portfolio
 			<p class="h3">AI-Driven Pipe Repair Robot User Interface Design</p>
 			<p>Polinvent's AI-driven pipe repair robot is a small yet powerful machine used in industrial and civil environments.</p>
 			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/polinvent-1.webp" alt="Polinvent">
-				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-2.webp" alt="Polinvent">
-				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-3.webp" alt="Polinvent">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/polinvent-1.webp" alt="Polinvent" width="1920" height="1080">
+				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-2.webp" alt="Polinvent" width="1920" height="1080">
+				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-3.webp" alt="Polinvent" width="1920" height="1080">
 			</div>
 			<p><strong class="text-light">Challenge:</strong> The interface needed to fit within a 16:9 display without any scrolling, and the design had to be accessible to workers wearing gloves. This posed the challenge of creating large, easy-to-press buttons without sacrificing the clarity of the information displayed on-screen.</p>
 			<p class="mb-0"><strong class="text-light">Solution:</strong> I designed an intuitive interface where all vital functions and information were accessible without the need for scrolling. By strategically placing large buttons and arranging data in a compact yet readable format, I ensured the UI would be easy to navigate, even for gloved users. This design helped streamline operations, allowing workers to save time and operate the machine efficiently in challenging conditions.</p>
@@ -58,9 +58,9 @@ css: portfolio
 			<p class="h3">Custom WordPress Website for a Visual Artist</p>
 			<p>László Magyar, also known as LaczaDesign, is a talented 2D/3D visual artist who creates custom digital artwork for the music industry.</p>
 			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/laczadesign-1.webp" alt="LaczaDesign">
-				<img class="portfolio__image" src="/assets/images/portfolio/laczadesign-2.webp" alt="LaczaDesign">
-				<img class="portfolio__image" src="/assets/images/portfolio/laczadesign-3.webp" alt="LaczaDesign">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/laczadesign-1.webp" alt="LaczaDesign" width="1400" height="824">
+				<img class="portfolio__image" src="/assets/images/portfolio/laczadesign-2.webp" alt="LaczaDesign" width="1400" height="824">
+				<img class="portfolio__image" src="/assets/images/portfolio/laczadesign-3.webp" alt="LaczaDesign" width="1400" height="824">
 			</div>
 			<p><strong class="text-light">Challenge:</strong> He needed a website that would showcase his vibrant, intricate designs without overwhelming viewers. To achieve this, we needed a monochromatic website that allowed his colorful works to take center stage. Additionally, the challenge was to display hundreds of high-quality images on one page without sacrificing performance or load times.</p>
 			<p><strong class="text-light">Solution:</strong> I developed a custom WordPress theme from scratch, focusing on a minimalist, monochromatic design that highlighted LaczaDesign's portfolio. Each artwork category was enhanced with custom fields, enabling László to add specific details like the artist's name, production year, and project description for each piece. For performance optimization, I implemented lazy loading and optimized images, ensuring the site loaded quickly even with hundreds of images displayed at once. This provided a seamless and visually striking user experience.</p>
@@ -71,9 +71,9 @@ css: portfolio
 			<p class="h3">Simple & Minimalist WordPress Site for a Contemporary Painter</p>
 			<p>Csorba Péter is a Hungarian/Transylvanian contemporary painter, working primarily with oils.</p>
 			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/csorbapeterart-1.webp" alt="Csorba Péter Art">
-				<img class="portfolio__image" src="/assets/images/portfolio/csorbapeterart-2.webp" alt="Csorba Péter Art">
-				<img class="portfolio__image" src="/assets/images/portfolio/csorbapeterart-3.webp" alt="Csorba Péter Art">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/csorbapeterart-1.webp" alt="Csorba Péter Art" width="1500" height="900">
+				<img class="portfolio__image" src="/assets/images/portfolio/csorbapeterart-2.webp" alt="Csorba Péter Art" width="1500" height="900">
+				<img class="portfolio__image" src="/assets/images/portfolio/csorbapeterart-3.webp" alt="Csorba Péter Art" width="1500" height="900">
 			</div>
 			<p><strong class="text-light">Challenge:</strong> He wanted a clean, minimalist website to showcase his art with "design without design." The goal was to ensure his paintings took center stage without any distractions. Additionally, he required custom metadata fields for each artwork, allowing him to display details like the medium and technique used. A newsletter subscription alongside a blog was also essential for him to stay connected with his audience. In the future, we'll also add a webshop to sell his artworks.</p>
 			<p class="mb-0"><strong class="text-light">Solution:</strong> I created a sleek, minimalist WordPress website that embodied the concept of "design without design." The layout was extremely simple, focusing entirely on his artwork. Custom fields were built to allow Péter to input metadata like medium and technique, seamlessly integrating into the site's artwork pages. I also set up a newsletter subscription form alongside a blog where he could share updates with his audience. The structure is already set up for a future webshop integration, allowing for easy expansion when he's ready to sell his works online.</p>
