--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,7 +15,7 @@ css: about
 	<section class="section">
 		<div class="container">
 			<div class="about-photo">
-				<img class="about-photo__image" src="/assets/images/roland.webp" alt="Roland Szabó" title="Hi, I'm Roland!">
+				<img class="about-photo__image" src="/assets/images/roland.webp" alt="Roland Szabó" title="Hi, I'm Roland!" width="380" height="380">
 			</div>
 			<p class="h3 mt-0">I believe that creating a website should be a simple, stress-free, and <span class="text-pink">fun</span> process.</p>
 			<p>I'm Roland, a web designer with 15 years of experience. My mission is to make the entire website-building process as easy as possible for you. Whether you're a small business owner or a creative professional, I believe in crafting websites that work for your audience while eliminating the complexities for you.</p>
