--- a/src/pages/hire-me.html
+++ b/src/pages/hire-me.html
@@ -70,7 +70,7 @@ css: hire-me
 			<div class="testimonials">
 				<blockquote class="testimonial">
 					<header class="testimonial__header">
-						<img class="testimonial__image" src="/assets/images/testimonial-pete.webp" alt="Pete Zaborszky">
+						<img class="testimonial__image" src="/assets/images/testimonial-pete.webp" alt="Pete Zaborszky" width="100" height="100">
 						<div class="testimonial__author">
 							<cite class="testimonial__name">Peter Zaborszky</cite>
 							<span class="testimonial__job">co-founder</span> &ndash; <a class="testimonial__link" href="https://proprivacy.com/" target="_blank" rel="noreferrer noopener">ProPrivacy</a>
@@ -80,7 +80,7 @@ css: hire-me
 				</blockquote>
 				<blockquote class="testimonial">
 					<header class="testimonial__header">
-						<img class="testimonial__image" src="/assets/images/testimonial-lacza.webp" alt="László Magyar">
+						<img class="testimonial__image" src="/assets/images/testimonial-lacza.webp" alt="László Magyar" width="100" height="100">
 						<div class="testimonial__author">
 							<cite class="testimonial__name">László Magyar</cite>
 							<span class="testimonial__job">digital artist</span> &ndash; <a class="testimonial__link" href="https://laczadesign.com/" target="_blank" rel="noreferrer noopener">LaczaDesign</a>
