--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -12,8 +12,21 @@ css: portfolio
 			<p class="page-header__text">Each project represents a tailored solution to unique challenges. Whether it's a custom UI or a fast-performing WordPress website, I take pride in delivering both beauty and functionality. Explore my case studies below to see how I've helped clients across different industries achieve their goals.</p>
 		</div>
 	</header>
-	
+
 	<div class="container">
+		<article class="portfolio">
+			<h2 class="portfolio__title">Taliga Ingatlan</h2>
+			<p class="h3">Website Redesign and Optimization of a Joint Representative</p>
+			<p></p>
+			<div class="portfolio__gallery">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/taliga-ingatlan-1.webp" alt="Taliga Ingatlan" width="1200" height="850">
+				<img class="portfolio__image" src="/assets/images/portfolio/taliga-ingatlan-2.webp" alt="Taliga Ingatlan" width="1200" height="850">
+				<img class="portfolio__image" src="/assets/images/portfolio/taliga-ingatlan-3.webp" alt="Taliga Ingatlan" width="1200" height="850">
+			</div>
+			<p><strong class="text-light">Challenge:</strong> The Taliga Ingatlan website needed a comprehensive redesign to address its poor performance, despite minimal content. The previous website also lacked the capability for the owner to edit any content, limiting flexibility. The objective was to enhance speed, responsiveness, and accessibility, ensuring readability for a broad demographic, including elderly users.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> The redesigned website, built on WordPress with my custom, lightweight theme, significantly improves performance, optimizing for fast load times and responsiveness. By using WordPress, the owner now has the flexibility to easily edit and manage all content on the site. An intuitive problem report form was developed, ensuring accessibility for all demographics. The content presentation was refined to maximize clarity and accessibility, creating a cohesive and user-friendly experience.</p>
+		</article>
+
 		<article class="portfolio">
 			<h2 class="portfolio__title">Fabriklak</h2>
 			<p class="h3">Alpine Hut WordPress Redesign for a Tranquil Getaway</p>
